src/objects/Apttus__WizardRulesetRuntime__c.object
<CustomObject>
    <description>A runtime instance of the ruleset provided by the wizard design</description>
    <fields>
        <fullName>Apttus__FocusObjectName__c</fullName>
        <description>Name of the focus object if one is determined by this ruleset. If none is determined, this value would be null.</description>
        <inlineHelpText>Name of the focus object if one is determined by this ruleset. If none is determined, this value would be null.</inlineHelpText>
        <label>Focus Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RecordTypeName__c</fullName>
        <description>Name of the Record Type if one is determined by this ruleset. If none is determined, this value would be null.</description>
        <inlineHelpText>Name of the Record Type if one is determined by this ruleset. If none is determined, this value would be null.</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardRulesetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference/Lookup to wizard ruleset</description>
        <inlineHelpText>Reference/Lookup to wizard ruleset</inlineHelpText>
        <label>Wizard Ruleset</label>
        <referenceTo>Apttus__WizardRuleset__c</referenceTo>
        <relationshipName>WizardRulesetRuntime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepRuntimeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference/Lookup to wizard step runtime</description>
        <inlineHelpText>Reference/Lookup to wizard step runtime</inlineHelpText>
        <label>Wizard Step Runtime</label>
        <referenceTo>Apttus__WizardStepRuntime__c</referenceTo>
        <relationshipName>WizardRulesetRuntime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Ruleset Runtime (Deprecated)</label>
    <nameField>
        <label>Wizard Ruleset Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Ruleset Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>